# ESAA-Core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  pyproject.toml  readme.md
.claude/: CLAUDE.md
.roadmap/: AGENT_CONTRACT.yaml  activity.jsonl  issues.json  lessons.json  roadmap.json  roadmap.schema.json  roadmap.sso-client-all-in-one.template.json
examples/: plugins.md
src/esaa/: cli.py  (+28 more)
tests/: test_adapters_llm.py  test_atomic_file_effects_integration.py  test_baseline_lessons_seed.py  test_boundary_grant.py  test_deterministic_cli_commands.py  test_dispatch_context_cache_order.py  test_duplicate_file_updates.py  test_edit_encoding_and_runtime_cases.py  test_event_hash_chain.py  test_external_plugin_effects.py  test_external_root_allowlist.py  test_external_runner_metrics.py  test_file_update_edits.py  test_g07_end_to_end.py  test_g07_lessons_dispatch.py  test_g07_review_mode.py  test_g07_schema_contracts.py  test_g07_task_model.py  test_hotfix_create_validation.py  test_hotfix_lifecycle.py  test_http_llm_adapter.py  test_init_empty_default.py  test_mock_adapter.py  test_parallel_dispatch.py  test_path_normalization.py  test_plugin_cli.py  test_plugin_directory_format.py  test_plugin_loader.py  test_plugin_manager.py  test_plugin_publication_assets.py  test_plugin_publication_workflow.py  test_plugin_status.py  test_post_survey_fixes.py  test_prior_status_done_issue_report.py  test_project_profile_onboarding.py  test_public_beta_release.py  test_repository_hygiene.py  test_resource_limits.py  test_review_role_policy.py  (+17 more)
(+65 files in other folders)
