[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esaa-core"
version = "0.5.0b4"
description = "ESAA deterministic orchestrator core"
readme = "readme.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "ESAA Contributors" },
]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.22.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/elzobrito/ESAA---Event-Sourcing-Agent-Architecture"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.scripts]
esaa = "esaa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
esaa = ["templates/*", "workspace/*"]
